fixed spacing in the nav

--- a/src/css/components/_components.site-nav.scss
+++ b/src/css/components/_components.site-nav.scss
@@ -131,10 +131,10 @@
 .site-nav__link {
   vertical-align: middle;
   display: table-cell;
-  font-size: 18px;
+  font-size: 15px;
   text-transform: uppercase;
   text-decoration: none;
-  padding: 0 30px;
+  padding: 0 15px;
   // font-family: 'Lato';
   font-weight: 700;
   color: $color-site-nav-link;
